File: minver.c
Original provenience: SNU-RT Benchmark Suite for Worst Case Timing Analysis

2016-02-26:
 - Added TACLeBench header to line 1
 - Rename global variable a to minver_a
 - Rename global variable b to minver_b
 - Rename global variable c to minver_c
 - Rename global variable aa to minver_aa
 - Rename global variable a_i to minver_a_i
 - Rename global variable e to minver_e
 - Rename global variable det to minver_det
 - Renamed function minver to minver_minver
 - Renamed function mmul to minver_mmul
 - Renamed function fabs to minver_fabs
 - Renamed function main to minver_main
 - Created new function main, calling minver_init, minver_main and
   returning minver_return
 - Reordered functions in source code: initialization- and
   return-value-related functions first, followed by algorithm core
   functions, followed by main functions
 - Applied code formatting with astyle as in the example