@@ -31,7 +31,6 @@
     Original source: C Algorithms for Real-Time DSP by P. M. Embree
 */
 
-
 /*
   Forward declaration of functions
 */
@@ -70,14 +69,17 @@ int main( void );
 /*
   Declaration of global variables
 */
+
+int adpcm_dec_test_data[SIZE * 2], adpcm_dec_result[SIZE * 2];
+
 /* Input data for the decoder usually generated by the encoder. */
-static int compressed[SIZE] = { 0, 253, 32 };
+int adpcm_dec_compressed[SIZE] = { 0, 253, 32 };
 
 /* G722 C code */
 
 /* QMF filter coefficients:
   scaled by a factor of 4 compared to G722 CCITT recommendation */
-int h[24] = {
+int adpcm_dec_h[24] = {
   12,   -44,   -44,   212,    48,  -624,   128,  1448,
   -840, -3220,  3804, 15504, 15504,  3804, -3220,  -840,
   1448,   128,  -624,    48,   212,   -44,   -44,    12
@@ -86,24 +88,24 @@ int h[24] = {
 //int xl,xh;
 
 /* variables for receive quadrature mirror filter here */
-int accumc[11], accumd[11];
+int adpcm_dec_accumc[11], adpcm_dec_accumd[11];
 
 /* outputs of decode() */
-int xout1, xout2;
+int adpcm_dec_xout1, adpcm_dec_xout2;
 
-int xs, xd;
+int adpcm_dec_xs, adpcm_dec_xd;
 
 /* variables for encoder (hi and lo) here */
 
-int il, szl, spl, sl, el;
+int adpcm_dec_il, adpcm_dec_szl, adpcm_dec_spl, adpcm_dec_sl, adpcm_dec_el;
 
-int qq4_code4_table[16] = {
+int adpcm_dec_qq4_code4_table[16] = {
   0,  -20456,  -12896,   -8968,   -6288,   -4240,   -2584,   -1200,
   20456,   12896,    8968,    6288,    4240,    2584,    1200,       0
 };
 
 
-int qq6_code6_table[64] = {
+int adpcm_dec_qq6_code6_table[64] = {
   -136,    -136,    -136,    -136,  -24808,  -21904,  -19008,  -16704,
   -14984,  -13512,  -12280,  -11192,  -10232,   -9360,   -8576,   -7856,
   -7192,   -6576,   -6000,   -5456,   -4944,   -4464,   -4008,   -3576,
@@ -115,99 +117,85 @@ int qq6_code6_table[64] = {
 };
 
 
-int wl_code_table[16] = {
+int adpcm_dec_wl_code_table[16] = {
   -60,  3042,  1198,   538,   334,   172,    58,   -30,
   3042,  1198,   538,   334,   172,    58,   -30,   -60
 };
 
 
-int ilb_table[32] = {
+int adpcm_dec_ilb_table[32] = {
   2048,  2093,  2139,  2186,  2233,  2282,  2332,  2383,
   2435,  2489,  2543,  2599,  2656,  2714,  2774,  2834,
   2896,  2960,  3025,  3091,  3158,  3228,  3298,  3371,
   3444,  3520,  3597,  3676,  3756,  3838,  3922,  4008
 };
 
-int nbl;     /* delay line */
-int al1, al2;
-int plt, plt1, plt2;
-int rs;
-int dlt;
-int rlt, rlt1, rlt2;
+int adpcm_dec_nbl;     /* delay line */
+int adpcm_dec_al1, adpcm_dec_al2;
+int adpcm_dec_plt, adpcm_dec_plt1, adpcm_dec_plt2;
+int adpcm_dec_rs;
+int adpcm_dec_dlt;
+int adpcm_dec_rlt, adpcm_dec_rlt1, adpcm_dec_rlt2;
 
 
-int detl;
+int adpcm_dec_detl;
 
 
-int deth;
-int sh;         /* this comes from adaptive predictor */
-int eh;
+int adpcm_dec_deth;
+int adpcm_dec_sh;         /* this comes from adaptive predictor */
+int adpcm_dec_eh;
 
-int qq2_code2_table[4] = {
+int adpcm_dec_qq2_code2_table[4] = {
   -7408,   -1616,   7408,  1616
 };
 
-int wh_code_table[4] = {
+int adpcm_dec_wh_code_table[4] = {
   798,   -214,    798,   -214
 };
 
 
-int dh, ih;
-int nbh, szh;
-int sph, ph, yh, rh;
+int adpcm_dec_dh, adpcm_dec_ih;
+int adpcm_dec_nbh, adpcm_dec_szh;
+int adpcm_dec_sph, adpcm_dec_ph, adpcm_dec_yh, adpcm_dec_rh;
 
-int delay_dhx[6];
+int adpcm_dec_delay_dhx[6];
 
-int delay_bph[6];
+int adpcm_dec_delay_bph[6];
 
-int ah1, ah2;
-int ph1, ph2;
-int rh1, rh2;
+int adpcm_dec_ah1, adpcm_dec_ah2;
+int adpcm_dec_ph1, adpcm_dec_ph2;
+int adpcm_dec_rh1, adpcm_dec_rh2;
 
 /* variables for decoder here */
-int ilr, yl, rl;
-int dec_deth, dec_detl, dec_dlt;
+int adpcm_dec_ilr, adpcm_dec_yl, adpcm_dec_rl;
+int adpcm_dec_dec_deth, adpcm_dec_dec_detl, adpcm_dec_dec_dlt;
 
-int dec_del_bpl[6];
+int adpcm_dec_dec_del_bpl[6];
 
-int dec_del_dltx[6];
+int adpcm_dec_dec_del_dltx[6];
 
-int dec_plt, dec_plt1, dec_plt2;
-int dec_szl, dec_spl, dec_sl;
-int dec_rlt1, dec_rlt2, dec_rlt;
-int dec_al1, dec_al2;
-int dl;
-int dec_nbl, dec_yh, dec_dh, dec_nbh;
+int adpcm_dec_dec_plt, adpcm_dec_dec_plt1, adpcm_dec_dec_plt2;
+int adpcm_dec_dec_szl, adpcm_dec_dec_spl, adpcm_dec_dec_sl;
+int adpcm_dec_dec_rlt1, adpcm_dec_dec_rlt2, adpcm_dec_dec_rlt;
+int adpcm_dec_dec_al1, adpcm_dec_dec_al2;
+int adpcm_dec_dl;
+int adpcm_dec_dec_nbl, adpcm_dec_dec_yh, adpcm_dec_dec_dh, adpcm_dec_dec_nbh;
 
 /* variables used in filtez */
-int dec_del_bph[6];
+int adpcm_dec_dec_del_bph[6];
 
-int dec_del_dhx[6];
+int adpcm_dec_dec_del_dhx[6];
 
-int dec_szh;
+int adpcm_dec_dec_szh;
 /* variables used in filtep */
-int dec_rh1, dec_rh2;
-int dec_ah1, dec_ah2;
-int dec_ph, dec_sph;
+int adpcm_dec_dec_rh1, adpcm_dec_dec_rh2;
+int adpcm_dec_dec_ah1, adpcm_dec_dec_ah2;
+int adpcm_dec_dec_ph, adpcm_dec_dec_sph;
 
-int dec_sh, dec_rh;
+int adpcm_dec_dec_sh, adpcm_dec_dec_rh;
 
-int dec_ph1, dec_ph2;
+int adpcm_dec_dec_ph1, adpcm_dec_dec_ph2;
 
-/*
-  Initialization- and return-value-related functions
-*/
-
-int adpcm_dec_return()
-{
-  return 0;
-}
-
-void adpcm_dec_init()
-{
-  /* reset, initialize required memory */
-  adpcm_dec_reset();
-}
 
 /*
   Arithmetic math functions
@@ -283,108 +271,124 @@ void adpcm_dec_decode( int input )
 
 
   /* split transmitted word from input into ilr and ih */
-  ilr = input & 0x3f;
-  ih = input >> 6;
+  adpcm_dec_ilr = input & 0x3f;
+  adpcm_dec_ih = input >> 6;
 
   /* LOWER SUB_BAND DECODER */
 
   /* filtez: compute predictor output for zero section */
-  dec_szl = adpcm_dec_filtez( dec_del_bpl, dec_del_dltx );
+  adpcm_dec_dec_szl = adpcm_dec_filtez( adpcm_dec_dec_del_bpl,
+                                        adpcm_dec_dec_del_dltx );
 
   /* filtep: compute predictor output signal for pole section */
-  dec_spl = adpcm_dec_filtep( dec_rlt1, dec_al1, dec_rlt2, dec_al2 );
+  adpcm_dec_dec_spl = adpcm_dec_filtep( adpcm_dec_dec_rlt1, adpcm_dec_dec_al1,
+                                        adpcm_dec_dec_rlt2, adpcm_dec_dec_al2 );
 
-  dec_sl = dec_spl + dec_szl;
+  adpcm_dec_dec_sl = adpcm_dec_dec_spl + adpcm_dec_dec_szl;
 
   /* invqxl: compute quantized difference signal for adaptive predic */
-  dec_dlt = ( ( long )dec_detl * qq4_code4_table[ilr >> 2] ) >> 15;
+  adpcm_dec_dec_dlt = ( ( long )adpcm_dec_dec_detl *
+                        adpcm_dec_qq4_code4_table[adpcm_dec_ilr
+                            >> 2] ) >> 15;
 
   /* invqxl: compute quantized difference signal for decoder output */
-  dl = ( ( long )dec_detl * qq6_code6_table[il] ) >> 15;
+  adpcm_dec_dl = ( ( long )adpcm_dec_dec_detl *
+                   adpcm_dec_qq6_code6_table[adpcm_dec_il] ) >>
+                 15;
 
-  rl = dl + dec_sl;
+  adpcm_dec_rl = adpcm_dec_dl + adpcm_dec_dec_sl;
 
   /* logscl: quantizer scale factor adaptation in the lower sub-band */
-  dec_nbl = adpcm_dec_logscl( ilr, dec_nbl );
+  adpcm_dec_dec_nbl = adpcm_dec_logscl( adpcm_dec_ilr, adpcm_dec_dec_nbl );
 
   /* scalel: computes quantizer scale factor in the lower sub band */
-  dec_detl = adpcm_dec_scalel( dec_nbl, 8 );
+  adpcm_dec_dec_detl = adpcm_dec_scalel( adpcm_dec_dec_nbl, 8 );
 
   /* parrec - add pole predictor output to quantized diff. signal */
   /* for partially reconstructed signal */
-  dec_plt = dec_dlt + dec_szl;
+  adpcm_dec_dec_plt = adpcm_dec_dec_dlt + adpcm_dec_dec_szl;
 
   /* upzero: update zero section predictor coefficients */
-  adpcm_dec_upzero( dec_dlt, dec_del_dltx, dec_del_bpl );
+  adpcm_dec_upzero( adpcm_dec_dec_dlt, adpcm_dec_dec_del_dltx,
+                    adpcm_dec_dec_del_bpl );
 
   /* uppol2: update second predictor coefficient apl2 and delay it as al2 */
-  dec_al2 = adpcm_dec_uppol2( dec_al1, dec_al2, dec_plt, dec_plt1, dec_plt2 );
+  adpcm_dec_dec_al2 = adpcm_dec_uppol2( adpcm_dec_dec_al1, adpcm_dec_dec_al2,
+                                        adpcm_dec_dec_plt, adpcm_dec_dec_plt1,
+                                        adpcm_dec_dec_plt2 );
 
   /* uppol1: update first predictor coef. (pole setion) */
-  dec_al1 = adpcm_dec_uppol1( dec_al1, dec_al2, dec_plt, dec_plt1 );
+  adpcm_dec_dec_al1 = adpcm_dec_uppol1( adpcm_dec_dec_al1, adpcm_dec_dec_al2,
+                                        adpcm_dec_dec_plt, adpcm_dec_dec_plt1 );
 
   /* recons : compute recontructed signal for adaptive predictor */
-  dec_rlt = dec_sl + dec_dlt;
+  adpcm_dec_dec_rlt = adpcm_dec_dec_sl + adpcm_dec_dec_dlt;
 
   /* done with lower sub band decoder, implement delays for next time */
-  dec_rlt2 = dec_rlt1;
-  dec_rlt1 = dec_rlt;
-  dec_plt2 = dec_plt1;
-  dec_plt1 = dec_plt;
+  adpcm_dec_dec_rlt2 = adpcm_dec_dec_rlt1;
+  adpcm_dec_dec_rlt1 = adpcm_dec_dec_rlt;
+  adpcm_dec_dec_plt2 = adpcm_dec_dec_plt1;
+  adpcm_dec_dec_plt1 = adpcm_dec_dec_plt;
 
   /* HIGH SUB-BAND DECODER */
 
   /* filtez: compute predictor output for zero section */
-  dec_szh = adpcm_dec_filtez( dec_del_bph, dec_del_dhx );
+  adpcm_dec_dec_szh = adpcm_dec_filtez( adpcm_dec_dec_del_bph,
+                                        adpcm_dec_dec_del_dhx );
 
   /* filtep: compute predictor output signal for pole section */
-  dec_sph = adpcm_dec_filtep( dec_rh1, dec_ah1, dec_rh2, dec_ah2 );
+  adpcm_dec_dec_sph = adpcm_dec_filtep( adpcm_dec_dec_rh1, adpcm_dec_dec_ah1,
+                                        adpcm_dec_dec_rh2, adpcm_dec_dec_ah2 );
 
   /* predic:compute the predictor output value in the higher sub_band decoder */
-  dec_sh = dec_sph + dec_szh;
+  adpcm_dec_dec_sh = adpcm_dec_dec_sph + adpcm_dec_dec_szh;
 
   /* invqah: in-place compute the quantized difference signal */
-  dec_dh = ( ( long )dec_deth * qq2_code2_table[ih] ) >> 15L ;
+  adpcm_dec_dec_dh = ( ( long )adpcm_dec_dec_deth *
+                       adpcm_dec_qq2_code2_table[adpcm_dec_ih] ) >> 15L ;
 
   /* logsch: update logarithmic quantizer scale factor in hi sub band */
-  dec_nbh = adpcm_dec_logsch( ih, dec_nbh );
+  adpcm_dec_dec_nbh = adpcm_dec_logsch( adpcm_dec_ih, adpcm_dec_dec_nbh );
 
   /* scalel: compute the quantizer scale factor in the higher sub band */
-  dec_deth = adpcm_dec_scalel( dec_nbh, 10 );
+  adpcm_dec_dec_deth = adpcm_dec_scalel( adpcm_dec_dec_nbh, 10 );
 
   /* parrec: compute partially recontructed signal */
-  dec_ph = dec_dh + dec_szh;
+  adpcm_dec_dec_ph = adpcm_dec_dec_dh + adpcm_dec_dec_szh;
 
   /* upzero: update zero section predictor coefficients */
-  adpcm_dec_upzero( dec_dh, dec_del_dhx, dec_del_bph );
+  adpcm_dec_upzero( adpcm_dec_dec_dh, adpcm_dec_dec_del_dhx,
+                    adpcm_dec_dec_del_bph );
 
   /* uppol2: update second predictor coefficient aph2 and delay it as ah2 */
-  dec_ah2 = adpcm_dec_uppol2( dec_ah1, dec_ah2, dec_ph, dec_ph1, dec_ph2 );
+  adpcm_dec_dec_ah2 = adpcm_dec_uppol2( adpcm_dec_dec_ah1, adpcm_dec_dec_ah2,
+                                        adpcm_dec_dec_ph, adpcm_dec_dec_ph1, adpcm_dec_dec_ph2 );
 
   /* uppol1: update first predictor coef. (pole setion) */
-  dec_ah1 = adpcm_dec_uppol1( dec_ah1, dec_ah2, dec_ph, dec_ph1 );
+  adpcm_dec_dec_ah1 = adpcm_dec_uppol1( adpcm_dec_dec_ah1, adpcm_dec_dec_ah2,
+                                        adpcm_dec_dec_ph, adpcm_dec_dec_ph1 );
 
   /* recons : compute recontructed signal for adaptive predictor */
-  rh = dec_sh + dec_dh;
+  adpcm_dec_rh = adpcm_dec_dec_sh + adpcm_dec_dec_dh;
 
   /* done with high band decode, implementing delays for next time here */
-  dec_rh2 = dec_rh1;
-  dec_rh1 = rh;
-  dec_ph2 = dec_ph1;
-  dec_ph1 = dec_ph;
+  adpcm_dec_dec_rh2 = adpcm_dec_dec_rh1;
+  adpcm_dec_dec_rh1 = adpcm_dec_rh;
+  adpcm_dec_dec_ph2 = adpcm_dec_dec_ph1;
+  adpcm_dec_dec_ph1 = adpcm_dec_dec_ph;
 
   /* end of higher sub_band decoder */
 
   /* end with receive quadrature mirror filters */
-  xd = rl - rh;
-  xs = rl + rh;
+  adpcm_dec_xd = adpcm_dec_rl - adpcm_dec_rh;
+  adpcm_dec_xs = adpcm_dec_rl + adpcm_dec_rh;
 
   /* receive quadrature mirror filters implemented here */
-  h_ptr = h;
-  ac_ptr = accumc;
-  ad_ptr = accumd;
-  xa1 = ( long ) xd * ( *h_ptr++ );
-  xa2 = ( long ) xs * ( *h_ptr++ );
+  h_ptr = adpcm_dec_h;
+  ac_ptr = adpcm_dec_accumc;
+  ad_ptr = adpcm_dec_accumd;
+  xa1 = ( long ) adpcm_dec_xd * ( *h_ptr++ );
+  xa2 = ( long ) adpcm_dec_xs * ( *h_ptr++ );
 
   /* main multiply accumulate loop for samples and coefficients */
   _Pragma( "loopbound min 10 max 10" )
@@ -398,8 +402,8 @@ void adpcm_dec_decode( int input )
   xa2 += ( long )( *ad_ptr ) * ( *h_ptr++ );
 
   /* scale by 2^14 */
-  xout1 = xa1 >> 14;
-  xout2 = xa2 >> 14;
+  adpcm_dec_xout1 = xa1 >> 14;
+  adpcm_dec_xout2 = xa2 >> 14;
 
   /* update delay lines */
   ac_ptr1 = ac_ptr - 1;
@@ -411,48 +415,8 @@ void adpcm_dec_decode( int input )
     *ad_ptr-- = *ad_ptr1--;
   }
 
-  *ac_ptr = xd;
-  *ad_ptr = xs;
-
-  return;
-}
-
-
-/* clear all storage locations */
-
-void adpcm_dec_reset()
-{
-  int i;
-
-
-  detl = dec_detl = 32;   /* reset to min scale factor */
-  deth = dec_deth = 8;
-  nbl = al1 = al2 = plt1 = plt2 = rlt1 = rlt2 = 0;
-  nbh = ah1 = ah2 = ph1 = ph2 = rh1 = rh2 = 0;
-  dec_nbl = dec_al1 = dec_al2 = dec_plt1 = dec_plt2 = dec_rlt1 = dec_rlt2 = 0;
-  dec_nbh = dec_ah1 = dec_ah2 = dec_ph1 = dec_ph2 = dec_rh1 = dec_rh2 = 0;
-
-  _Pragma( "loopbound min 6 max 6" )
-  for ( i = 0; i < 6; i++ ) {
-    ////delay_dltx[i] = 0;
-    delay_dhx[i] = 0;
-    dec_del_dltx[i] = 0;
-    dec_del_dhx[i] = 0;
-  }
-
-  _Pragma( "loopbound min 6 max 6" )
-  for ( i = 0; i < 6; i++ ) {
-    //delay_bpl[i] = 0;
-    delay_bph[i] = 0;
-    dec_del_bpl[i] = 0;
-    dec_del_bph[i] = 0;
-  }
-
-  _Pragma( "loopbound min 11 max 11" )
-  for ( i = 0; i < 11; i++ ) {
-    accumc[i] = 0;
-    accumd[i] = 0;
-  }
+  *ac_ptr = adpcm_dec_xd;
+  *ad_ptr = adpcm_dec_xs;
 
   return;
 }
@@ -501,7 +465,7 @@ int adpcm_dec_logscl( int il, int nbl )
 
 
   wd = ( ( long )nbl * 127L ) >> 7L; /* leak factor 127/128 */
-  nbl = ( int )wd + wl_code_table[il >> 2];
+  nbl = ( int )wd + adpcm_dec_wl_code_table[il >> 2];
 
   if ( nbl < 0 )
     nbl = 0;
@@ -520,7 +484,7 @@ int adpcm_dec_scalel( int nbl, int shift_constant )
 
   wd1 = ( nbl >> 6 ) & 31;
   wd2 = nbl >> 11;
-  wd3 = ilb_table[wd1] >> ( shift_constant + 1 - wd2 );
+  wd3 = adpcm_dec_ilb_table[wd1] >> ( shift_constant + 1 - wd2 );
 
   return ( wd3 << 3 );
 }
@@ -627,7 +591,7 @@ int adpcm_dec_logsch( int ih, int nbh )
 
 
   wd = ( ( long )nbh * 127L ) >> 7L;   /* leak factor 127/128 */
-  nbh = wd + wh_code_table[ih];
+  nbh = wd + adpcm_dec_wh_code_table[ih];
 
   if ( nbh < 0 )
     nbh = 0;
@@ -638,31 +602,102 @@ int adpcm_dec_logsch( int ih, int nbh )
 }
 
 /*
-  Main functions
+  Initialization- and return-value-related functions
 */
 
-void _Pragma( "entrypoint" ) adpcm_dec_main( void )
+/* clear all storage locations */
+
+void adpcm_dec_reset()
+{
+  int i;
+
+
+  adpcm_dec_detl = adpcm_dec_dec_detl = 32;   /* reset to min scale factor */
+  adpcm_dec_deth = adpcm_dec_dec_deth = 8;
+  adpcm_dec_nbl = adpcm_dec_al1 = adpcm_dec_al2 = adpcm_dec_plt1 = adpcm_dec_plt2
+                                  = adpcm_dec_rlt1 = adpcm_dec_rlt2 = 0;
+  adpcm_dec_nbh = adpcm_dec_ah1 = adpcm_dec_ah2 = adpcm_dec_ph1 = adpcm_dec_ph2 =
+                                    adpcm_dec_rh1 = adpcm_dec_rh2 = 0;
+  adpcm_dec_dec_nbl = adpcm_dec_dec_al1 = adpcm_dec_dec_al2 = adpcm_dec_dec_plt1 =
+      adpcm_dec_dec_plt2 = adpcm_dec_dec_rlt1 = adpcm_dec_dec_rlt2 = 0;
+  adpcm_dec_dec_nbh = adpcm_dec_dec_ah1 = adpcm_dec_dec_ah2 = adpcm_dec_dec_ph1 =
+      adpcm_dec_dec_ph2 = adpcm_dec_dec_rh1 = adpcm_dec_dec_rh2 = 0;
+
+  _Pragma( "loopbound min 6 max 6" )
+  for ( i = 0; i < 6; i++ ) {
+    ////delay_dltx[i] = 0;
+    adpcm_dec_delay_dhx[i] = 0;
+    adpcm_dec_dec_del_dltx[i] = 0;
+    adpcm_dec_dec_del_dhx[i] = 0;
+  }
+
+  _Pragma( "loopbound min 6 max 6" )
+  for ( i = 0; i < 6; i++ ) {
+    //delay_bpl[i] = 0;
+    adpcm_dec_delay_bph[i] = 0;
+    adpcm_dec_dec_del_bpl[i] = 0;
+    adpcm_dec_dec_del_bph[i] = 0;
+  }
+
+  _Pragma( "loopbound min 11 max 11" )
+  for ( i = 0; i < 11; i++ ) {
+    adpcm_dec_accumc[i] = 0;
+    adpcm_dec_accumd[i] = 0;
+  }
+
+  return;
+}
+
+void adpcm_dec_init()
 {
   int i, j, f;
-  static int test_data[SIZE * 2], result[SIZE * 2];
-
+  volatile int x = 0;
   /* read in amplitude and frequency for test data */
   j = 10;
-  f = 2000;
+  f = 2000; 
+
+  /* reset, initialize required memory */
+  adpcm_dec_reset();
 
   /* 16 KHz sample rate */
   /* XXmain_0, MAX: 2 */
   /* Since the number of times we loop in adpcm_dec_sin depends on the
      argument we add the fact: xxmain_0:[]: */
   _Pragma( "loopbound min 3 max 3" )
-  for ( i = 0 ; i < SIZE ; i++ )
-    test_data[i] = ( int ) j * adpcm_dec_cos( f * PI * i );
+  for ( i = 0 ; i < SIZE ; i++ ) {
+    adpcm_dec_test_data[i] = ( int ) j * adpcm_dec_cos( f * PI * i );
 
+    /* avoid constant-propagation optimizations */
+    adpcm_dec_test_data[i] += x;
+  }
+}
+
+int adpcm_dec_return()
+{
+  int i;
+  int check_sum;
+
+  for (i = 0; i < IN_END; i += 2)
+  {
+    check_sum += ( adpcm_dec_result[i] + adpcm_dec_result[i + 1] );
+  }
+
+  return check_sum != 2;
+}
+
+/*
+  Main functions
+*/
+
+void _Pragma( "entrypoint" ) adpcm_dec_main( void )
+{
+  int i;
+  
   _Pragma( "loopbound min 2 max 2" )
   for ( i = 0 ; i < IN_END ; i += 2 ) {
-    adpcm_dec_decode( compressed[i / 2] );
-    result[i] = xout1;
-    result[i + 1] = xout2;
+    adpcm_dec_decode( adpcm_dec_compressed[i / 2] );
+    adpcm_dec_result[i] = adpcm_dec_xout1;
+    adpcm_dec_result[i + 1] = adpcm_dec_xout2;
   }
 
 }
